test-deployment/1-springapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springapp
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      labels:
        app: springapp
    spec:
      containers:
      - name: springappcontainer
        image: charlesjatto/spring-boot-mongo:latest
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
