test-deployment/3-springapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springappsvc
  namespace: test
spec:
  selector:
    app: springapp
  ports:
  - port: 80
    targetPort: 8080
