test-deployment/4-statefulset-mongosvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongosvc
  namespace: test
spec:
  clusterIP: None # Headless Service
  selector:
    app: mongod
  ports:
  - port: 27017
    targetPort: 27017
