test-deployment/5-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress-rule
  namespace: test
spec:
  ingressClassName: nginx
  rules:
  - host: springapp.landmarktechapp.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: springappsvc
            port:
              number: 80
